--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -300,7 +300,7 @@ div.search-form
 .operations li
 {
         display: block;
-        padding: 3px 20px;
+        padding: 0px 20px;
         clear: both;
         font-weight: normal;
         line-height: 20px;
@@ -352,3 +352,205 @@ form a:hover, form a:focus
 {
     text-decoration: none;
 }
+
+.especific-view 
+{
+    width: 25%;
+    position: absolute;
+    display: table-header-group;
+}
+.especific-view a
+{
+    margin: 0% 5%;
+    text-decoration: none!important;
+}
+.forany-view 
+{
+    z-index: 1000;
+    margin: 0% 50%;
+    width: 94%;
+    border-left: #dddddd 1px solid;
+    padding: 33px 18px 44px;
+    -webkit-box-shadow: inset 1px 2px 6px 0px #dddddd;
+    box-shadow: inset 1px 2px 6px 0px #dddddd;
+}
+.forany-view-account
+{
+    z-index: 1000;
+    margin: -13.5% 50%;
+    width: 94%;
+    border-left: #dddddd 1px solid;
+    padding: 6px 18px 44px;
+    -webkit-box-shadow: inset 1px 2px 6px 0px #dddddd;
+    box-shadow: inset 1px 2px 6px 0px #dddddd;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 100%;
+    min-height: 50%;
+}
+.forany-view table tr th ,.forany-view-account  table tr th,  div.table-descr table tr th
+{
+    background: #c3d9ff;
+    /*background: #F7F7F7;*/
+}
+
+.new-brand-model 
+{
+    z-index: 1000;
+    margin: -3% -8%!important;
+    border-left: #dddddd 1px solid;
+    padding: 1% 2% 0% 2%;
+    -webkit-box-shadow: 2px 2px 5px #dddddd;
+    box-shadow: 2px 2px 5px #dddddd;
+    background: white;
+    position: absolute!important;
+}
+
+p#newModel, p#newBrand
+{
+    position: absolute;
+    margin: -5.2% 5%;
+    font-size: xx-large;
+    color: #1FB63E;
+    font-weight: 700;
+}
+p#newModel:hover, p#newBrand:hover
+{
+    font-size: xxx-large;
+    color: #0088cc;
+}
+
+div.table-descr 
+{
+    width: 75%!important;
+    margin: 0% 0% -3% 0%!important;
+}
+
+div.table-descr table select 
+{
+    margin: -2.3% 0% 0% -2%;
+    width: 100%;
+    border: 0;
+}
+.sub-totals 
+{
+    text-align: center!important;
+    font-weight: bold;
+    font-size: larger;
+}
+.total-account td
+{
+    font-size: xx-large;
+    text-align: end;
+    color: green;
+}
+
+.open-accounts
+{
+/*    width: 146%;
+    margin: inherit;
+    height: inherit;*/
+    width: 177%!important;
+    margin: 0% -16%!important;
+    height: inherit!important;
+}
+.to-payment
+{
+    background: green!important;
+    color: white!important;
+    text-decoration: none!important;
+    display: inherit;
+    padding: 8px;    
+}
+.to-payment:hover
+{
+    background: white!important;
+    color: green!important;    
+}
+
+
+/*COLOR DE MOTOS*/
+.ROJO
+{
+    border:2px solid red!important;
+    color: #FF2424;
+}
+.AMARILLO
+{
+    border:2px solid #DBB726!important;
+    color:#DBB726;
+}
+.NEGRO
+{
+    border:2px solid black!important;
+    color:black;
+}
+.GRIS
+{
+    border:2px solid #5C595A!important;
+    color:#5C595A;
+}
+.VERDE
+{
+    border:2px solid green!important;
+    color:green;
+}
+.NARANJA
+{
+    border:2px solid #F97618!important;
+    color:#F97618;
+}
+.BLANCO
+{
+    border:double 12px #fff!important;
+}
+.AZUL
+{
+    border:2px solid #2975BE!important;
+    color:#2975BE;
+}
+.VINOTINTO
+{
+    border:2px solid #BA2424!important;
+    color:#BA2424;
+}
+.PLATEADO
+{
+    border:2px solid #ADADAD!important;
+    color:#ADADAD;
+}
+.MORADO
+{
+    border:2px solid #A018BD!important;
+    color:#A018BD;
+}
+.MANZANA
+{
+    border:2px solid #79E072!important;
+    color:#79E072;
+}
+.CAFE
+{
+    border:2px solid #622929!important;
+    color:#622929;
+}
+.ROSA
+{
+    border:2px solid #F79BB0!important;
+    color:#F79BB0;
+}
+/*FIN DE COLOR DE MOTOS*/
+
+button#createInvoice 
+{
+    width: 91%;
+    margin: 4% 0%;
+}
+
+.account-null-note
+{
+    color: #C3D9FF;
+    text-align: center;
+}
+
+
